# LabProgrammazione

./: .gitignore  Banca.cpp  Banca.h  CMakeLists.txt  ContoCorrente.cpp  ContoCorrente.h  DataStoreCSV.cpp  DataStoreCSV.h  TransactionFactory.cpp  TransactionFactory.h  Transazione.cpp  Transazione.h  Utente.cpp  Utente.h  main.cpp
test/: CMakeLists.txt  runAllTests.cpp  testBanca.cpp  testConto.cpp  testUtente.cpp
